tmux: add new plugins and options for them
The new plugins are used to save sessions state (panes, windows...) across
power cycles.

Signed-off-by: Nuno Sá <noname.nuno@gmail.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g base-index 1
 
@@ -69,6 +71,12 @@ bind -n S-Right resize-pane -R 5
 bind -n S-M-Left  previous-window
 bind -n S-M-Right next-window
 bind -n C-s command-prompt -p "Name of new window: " "new-window -n '%%'"
+
+# tmux-continuum options
+set -g @continuum-restore "on"
+set -g @continuum-save-interval "15"
+set -g @resurrect-processes ":all:"
+set -g @resurrect-restore "C-t"
 
 # THEME
 # Automatically set window title
