tmux: add new characters to word separator list
Added '()' to the list. It's annoying when grepping for functions in
code.

Signed-off-by: Nuno Sá <noname.nuno@gmail.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,7 @@ bind p paste-buffer
 set-option -g prefix C-x
 bind-key C-x send-prefix
 
-setw -g word-separators ' ,;'
+setw -g word-separators ' ,;()'
 # This allows for middle mouse paste (from other apps) without having to press shift.
 bind -n MouseDown2Pane run "tmux set-buffer -b primary_selection -- \"$(xsel -o)\"; \
 		tmux paste-buffer -b primary_selection; tmux delete-buffer -b primary_selection"
