tmux: add option for git remotes in dracula
As the PR [1] was merged, let's push the option and remove the
unnecessary comment.

[1]: https://github.com/dracula/tmux/pull/174#event-8409825811
Signed-off-by: Nuno Sá <noname.nuno@gmail.com>

--- a/tmux.conf
+++ b/tmux.conf
@@ -96,9 +96,8 @@ set -g @dracula-military-time true
 set -g @dracula-git-show-current-symbol ✓
 set -g @dracula-weather-colors "green dark_gray"
 set -g @dracula-git-colors "dark_gray cyan"
-# depends on a custom change done on the theme. PR was already open but waiting for
-# some review
 set -g @dracula-git-no-untracked-files true
+set -g @dracula-git-show-remote-status true
 
 # r for reloading config file
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded."
