--- a/tmux.conf
+++ b/tmux.conf
@@ -87,12 +87,10 @@ set -g status-interval 1
 
 # statusbar
 set -g status-position top
-set -g @dracula-plugins "git cpu-usage ram-usage time"
+set -g @dracula-plugins "git cpu-usage ram-usage"
 set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
 set -g @dracula-border-contrast true
-set -g @dracula-show-timezone false
-set -g @dracula-military-time true
 set -g @dracula-git-show-current-symbol ✓
 set -g @dracula-weather-colors "green dark_gray"
 set -g @dracula-git-colors "dark_gray cyan"
